# test_json1

./: .gitignore  CMakeLists.txt  README.md  config.json
.github/workflows/: ci.yml  cmake-multi-platform.yml
config-service/: CMakeLists.txt  Doxyfile  README.md
config-service/cmake/: Coverage.cmake
config-service/config/: config.json
config-service/include/service/: config.hpp  logger.hpp
config-service/src/: config.cpp  main.cpp
config-service/tests/: CMakeLists.txt  test_config.cpp
include/: Config.h
src/: Config.cpp  main.cpp
ver1/: CMakeLists.txt
ver1/.github/workflows/: cmake-multi-platform.yml
ver1/src/: main.cpp
ver1/tests/: config_tests.cpp
